--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,11 +32,6 @@ main {
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
-.aside {
-    font-style: italic;
-    font-size: 1.2em;
-    margin-top: 10px
-}
 .money {
     font-weight: 900;
     font-style: normal;
@@ -49,8 +44,6 @@ main {
     margin: 0 0 2em 0;
     padding: 0;
 }
-
-
 
 .event-details li:before{
     content: "T";
@@ -68,18 +61,68 @@ h1 {
     font-size: 4em;
     text-align: center;
 }
+.overlay{
+  background-color: rgba(255, 255, 255, 0.4);
+  border-radius: 8px;
+  padding: 20px;
+  text-align: center;
+  margin-top: 20px;
+  font-size: 1.25em;
+}
+.header img.logo{
+  width: 100px;
+}
+body.home, .header{
+  background-image: url("https://www.nps.gov/common/uploads/banner_image/ner/homepage/EC803A56-1DD8-B71B-0BD7EE282E4EAECD.jpg");
+  background-repeat: no-repeat;
+  background-size: auto 1200px;
+}
+html {
+    height: 100%
+}
+h1{
+  color: #fff;
+  padding: 10px 20px;
+  font-family: 'Bungee Shade', cursive;
+  font-size: 82px;
+}
+@media (max-width: 576px) {
+  .hidden-xs-down{
+    display: none;
+  }
+}
+@media (max-width: 768px) {
+  h1{
+    font-size: 60px;
+  }
+  .overlay{
+    margin: 10px;
+  }
+}
+h1 span{
+  text-transform: uppercase;
+  font-size: .5em;
+}
+.vertical-center {
+  min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+  min-height: 100vh; /* These two lines are counted as one :-)       */
+
+  display: flex;
+  align-items: center;
+}
+
 main {
     text-align: center;
 }
 a.button {
-    display: inline-block;
-    padding: 0.5em 1em;
     background-color: black;
-    text-decoration: none;
-    font-weight: 900;
     font-size: 1.5em;
     color: #fff;
-    margin-bottom: 0.5em;
+    border-color: #000;
+}
+
+h1 a:hover, h1 a, h1 a:focus{
+  text-decoration: none;
 }
 
 table {
@@ -94,9 +137,9 @@ th, td {
 }
 
 .cf:before, .cf:after {
-    content: " "; display: table;    
+    content: " "; display: table;
 }
 
-.cf:after { 
-    clear: both; 
+.cf:after {
+    clear: both;
 }
